--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "crf.myloginapp"
-        minSdkVersion 16
+        minSdkVersion 7
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -30,6 +30,6 @@ buildscript {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile files('libs/http-request-6.0.jar')
 }
